--- a/index.html
+++ b/index.html
@@ -187,14 +187,18 @@
           प्रारुप अपलोड की प्रक्रिया जारी है, कोई प्रारुप अपडेट कराने के लिए बटन के माध्यम से टेलीग्राम पर सम्पर्क करें ताकि सभी जरुरी प्रारुप अपडेट किया जा सके । 
         </marquee>
       </div>
-    <!-- Updates Section (formerly Offers) -->
+<!-- Updates Section (formerly Offers) -->
 <div id="updatesSection" style="opacity:0; pointer-events:none; height:600px; transition: opacity 0.5s ease-in-out;">
   <!-- Modern Custom Progress Bar shown while Twitter timeline loads -->
   <div id="twitterProgress" class="modern-progress">
     <div class="modern-progress-bar"></div>
   </div>
-  <!-- Embedded Twitter timeline for @problemofpolice -->
-  <a class="twitter-timeline" data-height="600" data-theme="light" href="https://twitter.com/problemofpolice">
+  <!-- Embedded Twitter timeline for @uppolice with no borders, header, or footer -->
+  <a class="twitter-timeline" 
+     data-height="600" 
+     data-theme="light" 
+     data-chrome="noheader nofooter noborders transparent" 
+     href="https://twitter.com/uppolice">
     Please Wait, News is Loading...
   </a>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
