--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                   <div class="row">
                     <div class="col-6">
                       <div class="form-group">
-                        <label for="dobInput">Date of Birth</label>
+                        <label for="dobInput">जन्म तिथि</label>
                         <div class="date-input-wrapper">
                           <input type="text" class="form-control" id="dobInput" placeholder="DDMMYY" readonly>
                           <i class="fas fa-calendar-alt date-icon"></i>
@@ -155,7 +155,7 @@
                     </div>
                     <div class="col-6">
                       <div class="form-group">
-                        <label for="refDateInput">Age On</label>
+                        <label for="refDateInput">कब तक?</label>
                         <div class="date-input-wrapper">
                           <input type="text" class="form-control" id="refDateInput" placeholder="DDMMYY" readonly>
                           <i class="fas fa-calendar-alt date-icon"></i>
