--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
       <div class="modern-converter">
         <div class="container">
           <button class="collapsible">IPC ⇌ BNS &amp; CrPC ⇌ BNSS</button>
+          <div class="warning-text">
+            <em>Only for Reference -<a href="references.html" class="warning-link">Confirmation Here</a></em>
+          </div>
           <div class="converter-container">
             <div class="converter-section">
               <label for="ipc-input">IPC:</label>
