--- a/index.html
+++ b/index.html
@@ -87,24 +87,28 @@
               <input type="text" id="ipc-input" placeholder="Enter IPC value">
               <button class="convert-btn" id="get-bns-btn" data-type="ipc" style="display:none;">BNS में बदलें</button>
               <div class="result-container" id="ipc-result"></div>
+              <div class="all-details-container" id="ipc-details"></div>
             </div>
             <div class="converter-section">
               <label for="bns-input">BNS:</label>
               <input type="text" id="bns-input" placeholder="Enter BNS value">
               <button class="convert-btn" id="get-ipc-btn" data-type="bns" style="display:none;">IPC में बदलें</button>
               <div class="result-container" id="bns-result"></div>
+              <div class="all-details-container" id="bns-details"></div>
             </div>
             <div class="converter-section">
               <label for="crpc-input">CrPC:</label>
               <input type="text" id="crpc-input" placeholder="Enter CrPC value">
               <button class="convert-btn" id="get-bnss-btn" data-type="crpc" style="display:none;">BNSS में बदलें</button>
               <div class="result-container" id="crpc-result"></div>
+              <div class="all-details-container" id="crpc-details"></div>
             </div>
             <div class="converter-section">
               <label for="bnss-input">BNSS:</label>
               <input type="text" id="bnss-input" placeholder="Enter BNSS value">
               <button class="convert-btn" id="get-crpc-btn" data-type="bnss" style="display:none;">CrPC में बदलें</button>
               <div class="result-container" id="bnss-result"></div>
+              <div class="all-details-container" id="bnss-details"></div>
             </div>
           </div>
         </div>
