--- a/index.html
+++ b/index.html
@@ -2,9 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- Keep the site mobile-friendly -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Police Files</title>
+  
+  <!-- Enhanced SEO Meta Tags -->
+  <meta name="description" content="Access UP Police documents, convert IPC to BNS, CrPC to BNSS. Complete resource for police personnel including forms, leave applications, medical documents and investigation files." />
+  <meta name="keywords" content="UP Police, IPC conversion, BNS conversion, CrPC, BNSS, police documents, police forms, थाना कार्यालय, विवेचक फाईल, अवकाश, मेडिकल" />
+  <meta name="author" content="Police Files" />
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+  <meta name="google-site-verification" content="QQrZaUQSABzO0ZJA96Dtq83sdm_oM-syJK_yEi6T7sY" />
+  
+  <!-- Language Alternatives -->
+  <link rel="alternate" href="https://policefiles.online" hreflang="en" />
+  <link rel="alternate" href="https://policefiles.online/hi" hreflang="hi" />
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Access and convert police files, IPC to BNS, CrPC to BNSS. Find forms, documents and resources for UP Police personnel." />
+  <meta name="keywords" content="police files, IPC, BNS, CrPC, BNSS, UP Police, police forms, police documents" />
+  <meta name="author" content="Police Files" />
+  <meta name="robots" content="index, follow" />
+  
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:title" content="Police Files - UP Police Documents & Resources" />
+  <meta property="og:description" content="Access and convert police files, IPC to BNS, CrPC to BNSS. Find forms, documents and resources for UP Police personnel." />
+  <meta property="og:image" content="https://policefiles.online/icons/icon-150x150.png" />
+  <meta property="og:url" content="https://policefiles.online" />
+  <meta property="og:type" content="website" />
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Police Files - UP Police Documents & Resources" />
+  <meta name="twitter:description" content="Access and convert police files, IPC to BNS, CrPC to BNSS. Find forms, documents and resources for UP Police personnel." />
+  <meta name="twitter:image" content="https://policefiles.online/icons/twitter-icon.svg" />
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://policefiles.online" />
+
+  <title>Police Files - UP Police Documents & Resources</title>
 
   <!-- Google Analytics: Replace G-C4HYJ14HYY with your tracking ID -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-C4HYJ14HYY"></script>
@@ -29,6 +62,23 @@
   
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css" />
+
+  <!-- Schema.org Markup -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Police Files",
+      "description": "Online tool for UP Police personnel to access documents and convert between IPC, BNS, CrPC, and BNSS",
+      "applicationCategory": "Government Service",
+      "operatingSystem": "All",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "INR"
+      }
+    }
+  </script>
 </head>
 <body>
   <!-- Header: Only the Menu Button (hamburger) is shown in the header -->
