--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta name="robots" content="index, follow" />
   
   <!-- Open Graph Meta Tags for Social Media -->
-  <meta property="og:title" content="Police Files - UP Police Documents & Resources" />
+  <meta property="og:title" content="Police Files - Praroop & IPC,BNSS,CrPC,BNSS Converter" />
   <meta property="og:description" content="Access and convert police files, IPC to BNS, CrPC to BNSS. Find forms, documents and resources for UP Police personnel." />
   <meta property="og:image" content="https://policefiles.online/icons/icon-150x150.png" />
   <meta property="og:url" content="https://policefiles.online" />
