--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
   
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Police Files - UP Police Documents & Resources" />
+  <meta name="twitter:title" content="Police Files - Praroop & IPC,BNSS,CrPC,BNSS Converter" />
   <meta name="twitter:description" content="Access and convert police files, IPC to BNS, CrPC to BNSS. Find forms, documents and resources for UP Police personnel." />
   <meta name="twitter:image" content="https://policefiles.online/icons/twitter-icon.svg" />
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://policefiles.online" />
 
-  <title>Police Files - UP Police Documents & Resources</title>
+  <title>Police Files - Praroop & IPC,BNSS,CrPC,BNSS Converter</title>
 
   <!-- Enhanced Google Analytics 4 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-C4HYJ14HYY"></script>
