--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <label for="currentdate">किस तिथि को?</label>
                 <input type="text" id="currentdate" placeholder="DD/MM/YYYY">
             </div>
-            <button class="convert-btn" id="calculate-age-btn">उम्र की गणना</button>
+            <button class="convert-btn" id="calculate-age-btn" style="display: block;">उम्र की गणना</button>
             <div class="result-container" id="age-result"></div>
         </div>
     </div>
