--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Police Files is your dedicated online platform designed to simplify and streamline legal processes.">
   <meta name="keywords" content="Police Files, legal resource, legal templates, IPC converter, legal tools, case management, legal utilities">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Police Files - Your Legal Resource Hub</title>
+  <title>About Police Files - Praroop & IPC,BNS,CrPC,BNSS Converter</title>
   <!-- Link to your existing stylesheet -->
   <link rel="stylesheet" href="/css/style.css">
   <style>
@@ -70,7 +70,7 @@
     <!-- Back button at the top -->
     <a class="back-button" href="index.html">&larr; Back to Home</a>
     
-    <h1>About Police Files - Your Legal Resource Hub</h1>
+    <h1>About Police Files - Praroop & IPC,BNS,CrPC,BNSS Converter</h1>
     <p>
       Welcome to Police Files, your dedicated online platform designed to simplify and streamline legal processes. We provide a comprehensive suite of legal document templates, efficient case management tools, and essential legal utilities tailored for legal professionals, law enforcement officers, and individuals seeking reliable legal assistance in India. Our goal is to empower you with the resources you need to navigate the complexities of the legal system with greater ease and efficiency.
     </p>
@@ -88,7 +88,7 @@
     </p>
     <ul>
       <li>
-        <strong>India's Best Code Conversion Tools:</strong> Access our top-rated and most accurate converters for navigating the recent changes in Indian criminal law. Our No. 1 rated (according to user's feedback) IPC 1860 (Indian Penal Code) to BNS 2023 (Bharatiya Nyay Sanhita) converter, CrPC 1973 (Code of Criminal Procedure) to BNSS 2023 (Bharatiya Nagarik Suraksha Sanhita) converter, BNS 2023 to IPC 1860 converter, and BNSS 2023 to CrPC 1973 converter tool ensure you can seamlessly transition between the old and new codes. Each converter includes a full description in Hindi, making it easier to understand the nuances of each section and ensuring accuracy in your legal references.
+        <strong>India's Best IPC,BNS,CrPC,BNSS ConverterCode Conversion Tools:</strong> Access our top-rated and most accurate converters for navigating the recent changes in Indian criminal law. Our No. 1 rated (according to user's feedback) IPC 1860 (Indian Penal Code) to BNS 2023 (Bharatiya Nyay Sanhita) converter, CrPC 1973 (Code of Criminal Procedure) to BNSS 2023 (Bharatiya Nagarik Suraksha Sanhita) converter, BNS 2023 to IPC 1860 converter, and BNSS 2023 to CrPC 1973 converter tool ensure you can seamlessly transition between the old and new codes. Each converter includes a full description in Hindi, making it easier to understand the nuances of each section and ensuring accuracy in your legal references.
       </li>
       <li>
         <strong>Ready-to-Use Legal Templates and Formats:</strong> Save valuable time and effort with our collection of professionally designed, ready-to-use legal templates and formats. These templates cover a wide range of legal needs, helping you create documents efficiently and accurately.
