--- a/about.html
+++ b/about.html
@@ -63,12 +63,28 @@
     .back-button:hover {
       background-color: #0056b3;
     }
+    /* New styling for the Hindi button */
+    .lang-button {
+      display: inline-block;
+      margin: 15px;
+      padding: 10px 20px;
+      background-color: #28a745;
+      color: #fff;
+      border-radius: 4px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .lang-button:hover {
+      background-color: #218838;
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <!-- Back button at the top -->
     <a class="back-button" href="index.html">&larr; Back to Home</a>
+    <!-- Added Hindi button -->
+    <a class="lang-button" href="https://policefiles.online/abouthindi.html">हिन्दी में पढ़ें</a>
     
     <h1>About Police Files - Praroop & IPC,BNS,CrPC,BNSS Converter</h1>
     <p>
