--- a/index.html
+++ b/index.html
@@ -21,10 +21,18 @@
   <meta name="author" content="Police Files" />
   <meta name="robots" content="index, follow" />
   
+  <!-- Enhanced Logo Meta Tags for Search Results -->
+  <meta name="thumbnail" content="https://policefiles.online/icons/icon-192.png" />
+  <meta name="msapplication-TileImage" content="https://policefiles.online/icons/icon-192.png" />
+  <meta itemprop="logo" content="https://policefiles.online/icons/icon-192.png" />
+  
   <!-- Open Graph Meta Tags for Social Media -->
   <meta property="og:title" content="Police Files - Praroop & IPC,BNSS,CrPC,BNSS Converter" />
   <meta property="og:description" content="Access and convert police files, IPC to BNS, CrPC to BNSS. Find forms, documents and resources for UP Police personnel." />
-  <meta property="og:image" content="https://policefiles.online/icons/icon-150x150.png" />
+  <meta property="og:image" content="https://policefiles.online/icons/icon-192.png" />
+  <meta property="og:image:width" content="192" />
+  <meta property="og:image:height" content="192" />
+  <meta property="og:image:type" content="image/png" />
   <meta property="og:url" content="https://policefiles.online" />
   <meta property="og:type" content="website" />
   
@@ -32,7 +40,8 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Police Files - Praroop & IPC,BNSS,CrPC,BNSS Converter" />
   <meta name="twitter:description" content="Access and convert police files, IPC to BNS, CrPC to BNSS. Find forms, documents and resources for UP Police personnel." />
-  <meta name="twitter:image" content="https://policefiles.online/icons/twitter-icon.svg" />
+  <meta name="twitter:image" content="https://policefiles.online/icons/icon-192.png" />
+  <meta name="twitter:image:alt" content="Police Files Logo" />
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://policefiles.online" />
@@ -129,7 +138,9 @@
         "@type": "Offer",
         "price": "0",
         "priceCurrency": "INR"
-      }
+      },
+      "logo": "https://policefiles.online/icons/icon-192.png",
+      "image": "https://policefiles.online/icons/icon-192.png"
     }
   </script>
 </head>
