--- a/index.html
+++ b/index.html
@@ -262,6 +262,17 @@
               </h4>
             </div>
           </div>
+
+          <!-- App Download Button Card -->
+          <div class="card">
+            <div class="card-header" id="headingAppDownload">
+              <h4 class="mb-0 text-left">
+                <a class="btn app-download-btn glow-button" href="http://policefiles.online/files/app-release-signed.apk" target="_blank">
+                  <i class="fas fa-download"></i> Download App
+                </a>
+              </h4>
+            </div>
+          </div>
         </div><!-- End of accordion -->
       </div>
     </div>
