--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
           <div class="card">
             <div class="card-header" id="headingAppDownload">
               <h4 class="mb-0 text-left">
-                <a class="btn app-download-btn glow-button" href="http://policefiles.online/files/app-release-signed.apk" target="_blank">
+                <a class="btn app-download-btn glow-button" href="https://policefiles.online/files/app-release-signed.apk" target="_blank">
                   <i class="fas fa-download"></i> Download App
                 </a>
               </h4>
